--- a/greek-conjugator/.gitignore
+++ b/greek-conjugator/.gitignore
@@ -13,11 +13,40 @@
 
 # misc
 .DS_Store
+.env*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs
+*.log
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# CRACO
+.craco-cache/
+
+# cache directories
+.cache/
+.npm/
+.eslintcache
+.stylelintcache
+
+# Tailwind
+.tailwindcss-cache
+
+# Temporary files
+*.tmp
+*~
+
+#venv
+venv/
