--- a/greek-conjugator/package.json
+++ b/greek-conjugator/package.json
@@ -3,20 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "build:css": "postcss src/styles/tailwind.css -o src/styles/output.css",
+    "watch:css": "postcss src/styles/tailwind.css -o src/styles/output.css --watch",
+    "start": "npm run watch:css & react-scripts start",
+    "build": "npm run build:css && react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,9 +34,10 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "@tailwindcss/postcss": "^4.0.12",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.12"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^11.0.0",
+    "postcss-nested": "^7.0.2",
+    "tailwindcss": "^3.3.2"
   }
 }
