Update .gitignore to include additional large data files for verb import processing

--- a/greek-conjugator/.gitignore
+++ b/greek-conjugator/.gitignore
@@ -33,3 +33,9 @@ backend/.env
 # General
 .DS_Store
 *.log
+
+# Large data files
+kaikki.org-dictionary-Greek.jsonl
+extracted_verbs.json
+import_verbs.sql
+greek_5000_words.txt
