Enhance Greek Conjugator with audio features and UI improvements
- Updated the backend to include audio generation capabilities for conjugations and vocabulary, enhancing the learning experience.
- Refactored the PracticeSession and VocabularyPractice components to support audio playback, allowing users to hear correct pronunciations.
- Improved the user interface with new button styles and loading indicators for audio actions.
- Added autoplay options for audio in both practice components, providing a more interactive learning environment.
- Cleaned up unused code and optimized existing components for better performance and maintainability.

--- a/greek-conjugator/.gitignore
+++ b/greek-conjugator/.gitignore
@@ -39,3 +39,7 @@ kaikki.org-dictionary-Greek.jsonl
 extracted_verbs.json
 import_verbs.sql
 greek_5000_words.txt
+
+#audio cache
+audio_cache/
+backend/audio_cache/
