Add Wiktextract extraction scripts and ignores
Introduce Wiktionary parsing utilities and document the local Wiktextract
workflow, while ignoring local Wiktextract workspaces and JSON outputs.

--- a/.gitignore
+++ b/.gitignore
@@ -495,6 +495,12 @@ private.key
 greek-conjugator/kaikki.org-dictionary-Greek.jsonl
 kaikki.org-dictionary-Greek.jsonl
 
+# Wiktextract workspace and outputs
+wiktextract/
+wiktextract_el*.jsonl
+greek_verbs_wiktextract*.jsonl
+wiktextract_el_test.jsonl
+
 
 
 # Comments for future developers
